# KinectPong

./: .env  .gitignore  README.md  run.sh
TestDetectionMain/: hand_tracker  rest2.cpp  test.cpp
TestOpenCV/: CMakeLists.txt  hand_tracker  main.cpp  object.cpp
Unity/: .env
Unity/Assets/: InputSystem_Actions.inputactions
Unity/Assets/Objects/: Ball.prefab  CoordArtefact.prefab  Text Blue.prefab  Text Red.prefab  Timer.prefab
Unity/Assets/Scenes/: SampleScene.unity
Unity/Assets/Sripts/: Aura.cs  CoordArtefact.cs  Engine.cs  GameBehaviour.cs  GmeBehiour.cs  KinectHandTracker.cs  manageVelocity.cs  movePaddle.cs
Unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
opencv/: CMakeLists.txt  main.cpp
src/udp_server/: .env  CMakeLists.txt  test_client.cpp
src/udp_server/src/: calibrate-qt-main.cpp  calibrate-qt.cpp  object_detection_server.cpp  object_detector.cpp  object_detector.hpp  simple_client.cpp  simple_detector.hpp  simple_server.cpp  udp_json_server.cpp  udp_json_server.hpp  utils.cpp  utils.hpp
unity_source/: manageVelocity.cs  movePaddle.cs
